--- a/src/vista/Formulario_personas.form
+++ b/src/vista/Formulario_personas.form
@@ -155,6 +155,7 @@
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="32" green="83" red="51" type="rgb"/>
                 </Property>
+                <Property name="name" type="java.lang.String" value="txtUsuario" noResource="true"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="tfDNI1">
@@ -162,6 +163,7 @@
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="32" green="83" red="51" type="rgb"/>
                 </Property>
+                <Property name="name" type="java.lang.String" value="txtDni" noResource="true"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="txtCargo">
