--- a/src/vista/Boleta_pago.form
+++ b/src/vista/Boleta_pago.form
@@ -179,7 +179,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnRegistroBoleta">
           <Properties>
-            <Property name="text" type="java.lang.String" value="REGISTRAR EN RENIEC"/>
+            <Property name="text" type="java.lang.String" value="REGISTRAR  BOLETA"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="edtRuc_Dni1">
